--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -15,7 +15,7 @@
 .addTodoBtn{
     height: 35px;
     width: 110px;
-    font-size: 18px;
+    font-size: 17px;
     float: right;
     background-color: #0d6efd;
     color: white;
@@ -66,6 +66,7 @@
 }
 .todoText{
     width: 70%;
+    margin-top: 15px;
 }
 .todoControl{
     width: 30%;
