--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,8 +5,29 @@
   </button>
 </div>
 
-<div class="todoCard">
-  <div class="todos">
+<div class="todoCard" *ngIf="todosDb && todosDb.length>0">
+
+  <div class="todos" *ngFor="let data of todosDb">
+    <div class="todoText">
+      <h2 [innerText]="data.todoName">{{data.todoName}}</h2>
+    </div>
+    <div class="todoControl">
+      <button class="delBtn">
+        <i
+          class="fa-sharp fa-solid fa-trash"
+          style="font-size: 18px; color: white"
+        ></i>
+      </button>
+      <button class="addBtn">
+        <i
+          class="fa-solid fa-square-check"
+          style="font-size: 20px; color: white"
+        ></i>
+      </button>
+    </div>
+  </div>
+
+  <!-- <div class="todos">
     <div class="todoText">
       <h2>First Todo</h2>
     </div>
@@ -24,46 +45,5 @@
         ></i>
       </button>
     </div>
-  </div>
-
-  <div class="todos">
-    <div class="todoText">
-      <h2>Second Todo</h2>
-    </div>
-    <div class="todoControl">
-      <button class="delBtn">
-        <i
-          class="fa-sharp fa-solid fa-trash"
-          style="font-size: 18px; color: white"
-        ></i>
-      </button>
-
-      <button class="addBtn">
-        <i
-          class="fa-solid fa-square-check"
-          style="font-size: 20px; color: white"
-        ></i>
-      </button>
-    </div>
-  </div>
-
-  <div class="todos">
-    <div class="todoText">
-      <h2>Third Todo</h2>
-    </div>
-    <div class="todoControl">
-      <button class="delBtn">
-        <i
-          class="fa-sharp fa-solid fa-trash"
-          style="font-size: 18px; color: white"
-        ></i>
-      </button>
-      <button class="addBtn">
-        <i
-          class="fa-solid fa-square-check"
-          style="font-size: 20px; color: white"
-        ></i>
-      </button>
-    </div>
-  </div>
+  </div> -->
 </div>
