--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -303,7 +303,7 @@
 </style>
 
 <!-- Toolbar -->
-<div class="toolbar" role="banner">
+<!-- <div class="toolbar" role="banner">
   <img
     width="40"
     alt="Angular Logo"
@@ -311,8 +311,8 @@
   />
   <span>Welcome</span>
     <div class="spacer"></div>
-  
-</div>
+  <button class="logoutBtn" (click)="logout()">Logout</button>
+</div> -->
 
 <div class="content" role="main">
 
